# docs/openapi.json
@@ -40,7 +40,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -71,7 +71,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -107,7 +107,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -138,7 +138,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -164,7 +164,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/response.LoginRequest"
+                            "$ref": "#/definitions/dto.LoginRequest"
                         }
                     }
                 ],
@@ -172,19 +172,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.AuthTokenEnvelope"
+                            "$ref": "#/definitions/dto.AuthTokenEnvelope"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -209,19 +209,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.LogoutEnvelope"
+                            "$ref": "#/definitions/dto.LogoutEnvelope"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -241,13 +241,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.AuthTokenEnvelope"
+                            "$ref": "#/definitions/dto.AuthTokenEnvelope"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -273,7 +273,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/response.SignupRequest"
+                            "$ref": "#/definitions/dto.SignupRequest"
                         }
                     }
                 ],
@@ -281,25 +281,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.AuthTokenEnvelope"
+                            "$ref": "#/definitions/dto.AuthTokenEnvelope"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -339,7 +339,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.AppInfo"
+                            "$ref": "#/definitions/dto.AppInfoResponse"
                         }
                     }
                 }
@@ -364,19 +364,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.MeEnvelope"
+                            "$ref": "#/definitions/dto.MeEnvelope"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/response.ErrorEnvelope"
+                            "$ref": "#/definitions/dto.ErrorEnvelope"
                         }
                     }
                 }
@@ -384,18 +384,7 @@
         }
     },
     "definitions": {
-        "models.UserType": {
-            "type": "string",
-            "enum": [
-                "standard",
-                "admin"
-            ],
-            "x-enum-varnames": [
-                "StandardUser",
-                "AdminUser"
-            ]
-        },
-        "response.AppInfo": {
+        "dto.AppInfoResponse": {
             "type": "object",
             "properties": {
                 "build_time": {
@@ -409,7 +398,24 @@
                 }
             }
         },
-        "response.AuthTokenData": {
+        "dto.AuthTokenEnvelope": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.AuthTokenResponse"
+                },
+                "debug": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "trace_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.AuthTokenResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -426,24 +432,7 @@
                 }
             }
         },
-        "response.AuthTokenEnvelope": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/response.AuthTokenData"
-                },
-                "debug": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                },
-                "trace_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.ErrorCode": {
+        "dto.ErrorCode": {
             "type": "string",
             "enum": [
                 "VALIDATION_ERROR",
@@ -472,11 +461,11 @@
                 "CodeInvalidEmail"
             ]
         },
-        "response.ErrorData": {
+        "dto.ErrorData": {
             "type": "object",
             "properties": {
                 "code": {
-                    "$ref": "#/definitions/response.ErrorCode"
+                    "$ref": "#/definitions/dto.ErrorCode"
                 },
                 "details": {
                     "type": "object",
@@ -487,11 +476,11 @@
                 }
             }
         },
-        "response.ErrorEnvelope": {
+        "dto.ErrorEnvelope": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.ErrorData"
+                    "$ref": "#/definitions/dto.ErrorData"
                 },
                 "debug": {
                     "type": "string"
@@ -504,7 +493,7 @@
                 }
             }
         },
-        "response.LoginRequest": {
+        "dto.LoginRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -519,11 +508,11 @@
                 }
             }
         },
-        "response.LogoutEnvelope": {
+        "dto.LogoutEnvelope": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/response.LogoutResponse"
+                    "$ref": "#/definitions/dto.LogoutResponse"
                 },
                 "debug": {
                     "type": "string"
@@ -536,7 +525,7 @@
                 }
             }
         },
-        "response.LogoutResponse": {
+        "dto.LogoutResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -547,7 +536,24 @@
                 }
             }
         },
-        "response.MeData": {
+        "dto.MeEnvelope": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.MeResponse"
+                },
+                "debug": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "trace_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.MeResponse": {
             "type": "object",
             "properties": {
                 "email": {
@@ -567,24 +573,7 @@
                 }
             }
         },
-        "response.MeEnvelope": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/response.MeData"
-                },
-                "debug": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                },
-                "trace_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.SignupRequest": {
+        "dto.SignupRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -611,6 +600,17 @@
                     "minLength": 8
                 }
             }
+        },
+        "models.UserType": {
+            "type": "string",
+            "enum": [
+                "standard",
+                "admin"
+            ],
+            "x-enum-varnames": [
+                "StandardUser",
+                "AdminUser"
+            ]
         }
     },
     "securityDefinitions": {
