# internal/dto/dto.go
@@ -1,8 +1,8 @@
-package response
+package dto
 
 import "task_manager/internal/repositories/models"
 
-// SignupRequest is used by POST /auth/signup
+// Request DTOs
 type SignupRequest struct {
 	FirstName string `json:"firstname" validate:"required,min=2,max=100"`
 	LastName  string `json:"lastname" validate:"required,min=2,max=100"`
@@ -10,20 +10,20 @@ type SignupRequest struct {
 	Password  string `json:"password" validate:"required,min=8"`
 }
 
-// LoginRequest is used by POST /auth/login
 type LoginRequest struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required"`
 }
 
-type AuthTokenData struct {
+// Response DTOs
+type AuthTokenResponse struct {
 	AccessToken  string `json:"access_token"`
 	TokenType    string `json:"token_type"`
 	RefreshToken string `json:"refresh_token"`
 	ExpiresAt    string `json:"expires_at"`
 }
 
-type MeData struct {
+type MeResponse struct {
 	UserID    string          `json:"user_id"`
 	FirstName string          `json:"firstname"`
 	LastName  string          `json:"lastname"`
@@ -34,4 +34,9 @@ type MeData struct {
 type LogoutResponse struct {
 	Message string `json:"message"`
 	User    string `json:"user"`
+}
+type AppInfoResponse struct {
+	Version   string `json:"version"`
+	Commit    string `json:"commit"`
+	BuildTime string `json:"build_time"`
 }
